build(jvm): add jvm config log4j2 dependency